--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -1,17 +1,18 @@
-name: unit-tests
+name: unit-test
 on:
+  # Allow manual trigger
+  workflow_dispatch:
   pull_request:
     branches:
       - main
     paths:
       - '**.go'
       - Makefile
-      - '**.tpl'
       - go.mod
       - go.sum
 
 jobs:
-  unit-tests:
+  build:
     name: make test
     runs-on: ubuntu-latest
     steps:
@@ -19,6 +20,6 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.14'
+          go-version: '1.15'
       - name: make test
         run: make test
