--- a/generator.yaml
+++ b/generator.yaml
@@ -9,6 +9,10 @@ resources:
         template_path: hooks/sdk_update_pre_build_request.go.tpl
       sdk_delete_pre_build_request:
         template_path: hooks/sdk_delete_pre_build_request.go.tpl
+      sdk_read_one_post_set_output:
+        template_path: hooks/sdk_read_one_post_set_output.go.tpl
+      sdk_update_pre_set_output:
+        template_path: hooks/sdk_update_pre_set_output.go.tpl
     renames:
       operations:
         CreateBroker:
