use single dot to represent Users.Password in generator.yaml

--- a/apis/v1alpha1/generator.yaml
+++ b/apis/v1alpha1/generator.yaml
@@ -38,5 +38,5 @@ resources:
           # unnecessarily, we ignore Users for the purposes of comparing
           # resources.
           is_ignored: true
-      Users..Password:
+      Users.Password:
         is_secret: true
