Upgrade rabbit mq version used in e2e tests

--- a/test/e2e/resources/broker_rabbitmq_non_public.yaml
+++ b/test/e2e/resources/broker_rabbitmq_non_public.yaml
@@ -4,10 +4,10 @@ metadata:
   name: $BROKER_NAME
 spec:
   name: $BROKER_NAME
-  autoMinorVersionUpgrade: false
+  autoMinorVersionUpgrade: true
   deploymentMode: SINGLE_INSTANCE
   engineType: RabbitMQ
-  engineVersion: $MQ_RABBITMQ_ENGINE_VERSION
+  engineVersion: "$MQ_RABBITMQ_ENGINE_VERSION"
   hostInstanceType: $MQ_HOST_INSTANCE_TYPE
   publiclyAccessible: false
   users:
