--- a/apis/v1alpha1/generator.yaml
+++ b/apis/v1alpha1/generator.yaml
@@ -2,6 +2,10 @@ ignore:
   resource_names:
     - Configuration
     - User
+  field_paths:
+    - CreateBrokerInput.DataReplicationPrimaryBrokerArn
+    - CreateBrokerInput.DataReplicationMode
+    - User.ReplicationUser
 resources:
   Broker:
     hooks:
