--- a/generator.yaml
+++ b/generator.yaml
@@ -17,6 +17,8 @@ resources:
         template_path: hooks/sdk_read_one_post_set_output.go.tpl
       sdk_update_pre_set_output:
         template_path: hooks/sdk_update_pre_set_output.go.tpl
+      delta_pre_compare:
+        template_path: hooks/delta_pre_compare.go.tpl
     renames:
       operations:
         CreateBroker:
