--- a/apis/v1alpha1/ack-generate-metadata.yaml
+++ b/apis/v1alpha1/ack-generate-metadata.yaml
@@ -1,13 +1,13 @@
 ack_generate_info:
-  build_date: "2025-09-19T17:08:59Z"
-  build_hash: 6b4211163dcc34776b01da9a18217bac0f4103fd
-  go_version: go1.24.6
-  version: v0.52.0
+  build_date: "2025-09-14T01:57:59Z"
+  build_hash: 70b3122f90de4036494948ff3c2fa08b64ce7b2e
+  go_version: go1.25.0
+  version: v0.51.0-3-g70b3122-dirty
 api_directory_checksum: 524e0af3e7ceea86a3153c12c06091ea924d3410
 api_version: v1alpha1
 aws_sdk_go_version: v1.32.6
 generator_config_info:
-  file_checksum: c4d48b801234a8e3f8c710a0242949ca43ec0a64
+  file_checksum: eb2fe1bccc0a0a3fd466b66261738bfe016d1b7d
   original_file_name: generator.yaml
 last_modification:
   reason: API generation
