--- a/test/e2e/resources/broker_rabbitmq_non_public.yaml
+++ b/test/e2e/resources/broker_rabbitmq_non_public.yaml
@@ -10,6 +10,10 @@ spec:
   engineVersion: "$MQ_RABBITMQ_ENGINE_VERSION"
   hostInstanceType: $MQ_HOST_INSTANCE_TYPE
   publiclyAccessible: false
+  maintenanceWindowStartTime:
+    dayOfWeek: MONDAY
+    timeOfDay: "22:00"
+    timeZone: UTC
   users:
     - password:
         namespace: $ADMIN_USER_PASS_SECRET_NAMESPACE
