--- a/apis/v1alpha1/ack-generate-metadata.yaml
+++ b/apis/v1alpha1/ack-generate-metadata.yaml
@@ -1,8 +1,8 @@
 ack_generate_info:
-  build_date: "2025-09-16T01:09:55Z"
-  build_hash: dc3b51b8ce1d4c5c691236e6df5a1aa056d5e1f0
+  build_date: "2025-09-25T03:44:36Z"
+  build_hash: 210496082b295a0a73b29182be2fdb1556c4b512
   go_version: go1.25.0
-  version: v0.51.0-4-gdc3b51b
+  version: v0.52.0-3-g2104960
 api_directory_checksum: 524e0af3e7ceea86a3153c12c06091ea924d3410
 api_version: v1alpha1
 aws_sdk_go_version: v1.32.6
