--- a/test/e2e/resources/broker_rabbitmq_security_group.yaml
+++ b/test/e2e/resources/broker_rabbitmq_security_group.yaml
@@ -10,10 +10,10 @@ spec:
   engineVersion: "$MQ_RABBITMQ_ENGINE_VERSION"
   hostInstanceType: $MQ_HOST_INSTANCE_TYPE
   publiclyAccessible: false
-  maintenanceWindowStartTime:
-    dayOfWeek: MONDAY
-    timeOfDay: "22:00"
-    timeZone: UTC
+  securityGroups:
+    - $SECURITY_GROUP_ID
+  subnetIDs:
+    - $SUBNET_ID
   users:
     - password:
         namespace: $ADMIN_USER_PASS_SECRET_NAMESPACE
